@@ -2,6 +2,9 @@ NEXT_RELEASE:
  - SMTP server:
    - Now gives application-level code opportunity to set a different
      Received header for each recipient of a multi-recipient message.
+ - IMAP client:
+   - New `startTLS' method to allow explicit negotiation of transport
+     security.
 
 0.1.0:
  - Tons of bugfixes in IMAP4, POP3, and SMTP protocols
